<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/xiaoguo_bg">
    <RelativeLayout
        android:background="@drawable/family_bg13x"
        android:layout_width="match_parent"
        android:layout_height="80dip"
        android:orientation="vertical">
        <TextView
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_marginLeft="30dip"
            android:layout_centerVertical="true"
            android:text="问卷评估问卷"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:textSize="13sp"
            android:textColor="@color/white"
            android:layout_marginLeft="30dip"
            android:layout_marginBottom="7dip"
            android:layout_alignParentBottom="true"
            android:text="让我们一起来客观评测孩子的进步！"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageView
            android:id="@+id/iv_back"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="22dip"
            android:layout_alignParentRight="true"
            android:src="@drawable/tuichu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:overScrollMode="never">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:overScrollMode="never">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                xmlns:tools="http://schemas.android.com/tools"
                android:orientation="vertical"
                android:layout_marginHorizontal="26dp"
                android:layout_marginTop="15dp">

                <Button
                    android:id="@+id/btn_pcdi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/longbutton3x"
                    android:text="语言评估问卷"
                    android:gravity="center"
                    android:paddingBottom="10dp"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/fff_btn_color"
                    android:layout_marginBottom="5dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="10sp"
                        android:textColor="#14101e"
                        android:text="●"
                        android:layout_marginEnd="4dp" />
                    <TextView
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:lineSpacingExtra="6dp"
                        android:textSize="13sp"
                        android:textColor="#14101e"
                        android:text="语言评估问卷量表是由父母填写，测量16个月以上说普通话的儿童早期语言发展的评估量表。目前已在世界各地广泛使用。"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="10sp"
                        android:textColor="#14101e"
                        android:text="●"
                        android:layout_marginEnd="4dp"/>
                    <TextView
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:lineSpacingExtra="6dp"
                        android:layout_height="wrap_content"
                        android:textSize="13sp"
                        android:textColor="#14101e"
                        android:text="通过使用本量表，可以对语言发育迟缓的儿童进行定期监控，以发现其在同龄儿童中的差异和进步。"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="10sp"
                        android:textColor="#14101e"
                        android:text="●"
                        android:layout_marginRight="4dp" />
                    <TextView
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:lineSpacingExtra="6dp"
                        android:textSize="13sp"
                        android:textColor="#14101e"
                        android:text="本量表必做部分将花费您10~15分钟时间。"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                xmlns:tools="http://schemas.android.com/tools"
                android:orientation="vertical"
                android:layout_marginHorizontal="26dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp">

                <Button
                    android:id="@+id/btn_abc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/longbutton3x"
                    android:text="行为评估问卷"
                    android:gravity="center"
                    android:paddingBottom="10dp"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/fff_btn_color"
                    android:layout_marginBottom="5dp"  />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="10sp"
                        android:textColor="#14101e"
                        android:text="●"
                        android:layout_marginEnd="4dp" />
                    <TextView
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:lineSpacingExtra="6dp"
                        android:textSize="13sp"
                        android:textColor="#14101e"
                        android:text="行为评估问卷量表又称自闭症行为量表，是一份由他人报告的形式，用于检测儿童是否患有自闭症的一个简单的方法，只能做为一个参考诊断依据，并不能单一地做为判定诊断结果的依据。"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="10sp"
                        android:textColor="#14101e"
                        android:text="●"
                        android:layout_marginRight="4dp" />
                    <TextView
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:lineSpacingExtra="6dp"
                        android:layout_height="wrap_content"
                        android:textSize="13sp"
                        android:textColor="#14101e"
                        android:text="本量表有57个描述自闭症儿童的感觉、行为、情绪、语言等方面异常表现的项目，通过使用本量表，可以对自闭症儿童进行整体症状评估打分。"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="10sp"
                        android:textColor="#14101e"
                        android:text="●"
                        android:layout_marginRight="4dp" />
                    <TextView
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textSize="13sp"
                        android:lineSpacingExtra="6dp"
                        android:textColor="#14101e"
                        android:text="本量表将花费您10~15分钟时间。"/>
                </LinearLayout>

               </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>